--- a/widget/style.css
+++ b/widget/style.css
@@ -19,6 +19,18 @@ body{
     place-items: center;
 }
 
+.emailimage{
+    width: 132px;
+    height: 132px;
+    border-radius: 50%;
+    background-color: var(--text-input-field);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+
+}
+
 
 .primary-button{
 
